# monitor

./: .gitignore  CMakeLists.txt  README.md
IT8951/: IT8951  IT8951.c  IT8951.h  main.c  miniGUI.h
generator/: .gitignore  Cargo.toml
generator/src/: color.rs  main.rs  monitor.rs  monitor_canvas.rs  todo.rs
