[package]
name = "generator"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = { git = "https://github.com/image-rs/imageproc" }
rusttype = "0.9.2"
