[package]
name = "generator"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# image print
image = "0.23.14"
imageproc = { git = "https://github.com/image-rs/imageproc" }
rusttype = "0.9.2"

# ajax get
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

google-calendar3 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
yup-oauth2 = "^5.0"
